[package]
name = "libmhash"
description = "A file hashing library that can do multiple hashes for multile files at the same time."
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/libmhash"
repository = "https://github.com/maboroshinokiseki/libmhash"
readme = "./README.md"
keywords = ["hash"]

[dependencies]
ambassador = "0.3.5"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.8"
parking_lot = "0.12.1"
thiserror = "1.0.47"
threadpool = "1.8.1"
crc32c = { version = "0.6.4", optional = true }
crc32fast = { version = "1.3.2", optional = true }
sha1 = { version = "0.10.5", optional = true }
sha2 = { version = "0.10.7", optional = true }

[dev-dependencies]
hex = "0.4.3"

[features]
alter-impl = [
    "dep:crc32c",
    "dep:crc32fast",
    "dep:sha1",
    "dep:sha2",
] # Use alternative implementations of some hash algorithms, they are usually faster since they are usually implemented in assembly
